@@ -746,9 +746,7 @@ INIC_MAC = "mac"
 INIC_IP = "ip"
 INIC_MODE = "mode"
 INIC_LINK = "link"
-INIC_BRIDGE = "bridge"
 INIC_PARAMS_TYPES = {
-  INIC_BRIDGE: VTYPE_STRING,
   INIC_IP: VTYPE_MAYBE_STRING,
   INIC_LINK: VTYPE_STRING,
   INIC_MAC: VTYPE_STRING,
